fixed layout issues and pagination

--- a/news-tracker/src/styles/footer/footer.scss
+++ b/news-tracker/src/styles/footer/footer.scss
@@ -1,6 +1,6 @@
 .FooterBlock {
   display: flex;
-  background: aqua;
+  background-color: rgba(33, 39, 45);
   height: 60px;
   margin-top: auto;
 }
