--- a/news-tracker/src/styles/header/header.scss
+++ b/news-tracker/src/styles/header/header.scss
@@ -1,16 +1,19 @@
 .HeaderBlock {
-
   padding-left: 10px;
   height: 60px;
-  background: #5d5d5e;
   justify-content: space-between;
   display: flex;
   align-items: center;
 
+  position: fixed;
+  top: 0;
+  width: 100%;
+  background-color: rgba(33, 39, 45, 0.95);
+  backdrop-filter: blur(3px);
+
   .HeaderLink {
-    color: #ebebed;
+    color: #bbbbbb;
     text-decoration: none;
-    border-color: #000000;
     height: 90%;
     display: flex;
     flex-direction: row;
@@ -18,11 +21,6 @@
     align-items: center;
     border-radius: 20px;
     padding: 0 20px;
-  }
-
-  .HeaderLink:hover {
-    background: #4f4e4e;
-    transition: 0.6s;
   }
 
   .NavBarMain {
@@ -34,17 +32,11 @@
     border-radius: 3px;
     padding-right: 10px;
   }
-
   .searchInputBlock {
     display: flex;
     align-items: center;
-    padding-right: 10%;
+    justify-content: center;
   }
 
-  .searchInput {
-    height: 30px;
-    border-radius: 15px;
-    padding-left: 10px;
-    margin-right: 10px;
-  }
+
 }
