--- a/news-tracker/src/styles/news/news.scss
+++ b/news-tracker/src/styles/news/news.scss
@@ -2,15 +2,14 @@
   display: flex;
   flex-grow: 1;
   flex-direction: column;
-  background: black;
+  background: #101418;
   overflow-x: hidden;
 
   .newsContainer {
     display: flex;
     flex-direction: column;
     width: 400px;
-    background: #1f1f23;
-    border: 1px solid;
+    background: #14191f;
     padding: 20px;
     margin: 10px;
     border-radius: 10px;
@@ -30,22 +29,21 @@
     .AuthorBlock {
       padding-top: 5px;
       padding-bottom: 10px;
-      color: #ebebed;
+      color: #f3f6f9;
     }
 
     .titleBlock {
-      color: #ebebed;
+      color: #f3f6f9;
     }
 
     .descriptionBlock {
-      color: #ebebed;
+      color: #f3f6f9;
       width: 350px;
     }
 
     .newsLink {
       text-decoration: none;
-      color: #000000;
-      border-color: #000000;
+      color: #f3f6f9;
       height: min-content;
       padding: 0;
       margin: 0;
@@ -55,17 +53,13 @@
       display: flex;
       justify-content: space-between;
       padding-bottom: 10px;
-      color: #ebebed;
+      color: #f3f6f9;
     }
   }
 
-  .newsContainer:hover {
-    background: #18181b;
-    transition: 0.6s;
-  }
-
   .allNewsBlock {
-    padding-top: 30px;
+    background: #101418;
+    padding-top: 70px;
     display: flex;
     flex-direction: column;
     min-height: 100vh;
@@ -73,24 +67,26 @@
     align-items: center;
 
     .pagination {
-      color: white;
+      background: #101418;
+      color: #f3f6f9;
       display: flex;
       flex-direction: row;
-      justify-content: space-between;
+      justify-content: center;
       width: 700px;
       margin: 20px 0;
+      align-items: center;
     }
   }
 
   .topHeadlinesNewsBlock {
     font-family: "Ubuntu", sans-serif;
     font-size: 15px;
-    background: #0e0e10;
+    background: #101418;
     display: flex;
     min-height: 100vh;
     flex-direction: row;
     justify-content: center;
-    padding-top: 30px;
+    padding-top: 70px;
   }
 
   .masonryGrid {
@@ -107,24 +103,12 @@
   }
 
   .spinnerBlock {
-    background: #0e0e10;
+    background: #101418;
     display: flex;
-    height: calc(100vh - 120px);
+    height: calc(100vh - 60px);
     flex-direction: row;
     justify-content: center;
     padding-top: 30px;
     align-items: center;
   }
-
-  .spinner {
-    display: flex;
-    animation: spin 0.3s infinite linear;
-    border: 3px solid #f3f3f3;
-    border-top: 3px solid #3498db;
-    border-radius: 50%;
-    width: 50px;
-    height: 50px;
-    margin: 0 auto;
-  }
-
 }
